<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="casual"
            android:text="@string/how_are_you_feeling"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textColor="#201e1e"
            android:textSize="34sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="8"
        android:alignmentMode="alignMargins"
        android:columnCount="2"
        android:columnOrderPreserved="false"
        android:orientation="vertical"
        android:padding="14dp"
        android:rowCount="3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/greatBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/very_happy_face"
                app:srcCompat="@mipmap/great_ic"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="113dp"
                android:onClick="onGreat"/>

            <ImageButton
                android:id="@+id/goodBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/happy_face"
                app:srcCompat="@mipmap/good_ic"
                tools:layout_editor_absoluteX="96dp"
                tools:layout_editor_absoluteY="66dp"
                android:onClick="onGood"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/mehBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/meh_face"
                app:srcCompat="@mipmap/meh_ic"
                tools:layout_editor_absoluteX="154dp"
                tools:layout_editor_absoluteY="318dp"
                android:onClick="onMeh"/>

            <ImageButton
                android:id="@+id/worseBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/sad_face"
                app:srcCompat="@mipmap/worse_ic"
                tools:layout_editor_absoluteX="216dp"
                tools:layout_editor_absoluteY="178dp"
                android:onClick="onWorse"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/worstBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/very_sad_face"
                app:srcCompat="@mipmap/worst_ic"
                android:onClick="onWorst"/>

            <Button
                android:id="@+id/skillsListBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/skills_list"
                android:onClick="onSkillsList"/>

        </LinearLayout>
    </LinearLayout>

</LinearLayout>